# lincei-quant-research-engine

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUING.md  CONTRIBUTING.md  GEMINI.md  MASTER_CONTEXT.md  PROJECT_CONTEXT.md  README.md  SPEC.md  context-pack.json  docker-compose.yml  handoff.md  plan.md  progress.md  pyproject.toml  pytest.ini  research.md  result.md  terminology.md
.ai/: DEVELOPMENT_HISTORY.md  QUICK_REFERENCE.md  TECH_STACK.md
backend/: .env.example  Dockerfile  jest.config.js  nest-cli.json  package-lock.json  package.json
docs/: README.md  alpha-model-design.md  api-reference.md  architecture.md  backtest_checklist.md  capital-evidence-work-plan.md  capital-loop-hardening-plan.md  data_sources.md  deployment-guide.md  development-guide.md  execution-readiness.md  experiment_log.md  full-lean-backtest-setup.md  handoff-2026-05-23-v1-lean-experiment.md  implementation-roadmap.md  latency-and-execution-paths.md  lean-quantconnect-engine.md  llm-alpha-committee.md  ml-external-baselines-research.md  model-training-plan.md  news_nlp_protocol.md  own-capital-alphaarchitect-corpus-review.md  phase1_plan.md  project-architecture.md  reference_landscape.md  research-references.md  research_protocol.md  review-prompt-gpt55-lean-ml-backtest.md  review-prompt-v1-lean-experiment-handoff.md  risk_policy.md  toss-open-api-readiness.md
frontend/: .dockerignore  .eslintrc.js  Dockerfile  README.md  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  tsconfig.app.json  vite.config.ts
ml/: README.md  __init__.py  (+1 more)
(+441 files in other folders)
