[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lincei-quant-research-engine"
version = "0.1.0"
description = "LEAN-compatible quant research engine with news intelligence, LLM-agent workflows, and strict risk gates."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "loguru>=0.7.3",
  "numpy>=2.0",
  "pandas>=2.2",
  "pydantic>=2.10",
  "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.8"]

[project.scripts]
lincei-quant-demo = "lincei_quant.demo:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
